fixing title z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,7 @@ nav > div:nth-child(1) {
   top: 10vh;
   width: 100vw;
   padding: 0;
+  z-index: 10;
 }
 
 nav > div:nth-child(2) {
